k3s/ingress-webapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-www-to-main@kubernetescrd,default-redirect-to-https@kubernetescrd
spec:
  tls:
  - hosts:
    - studpostncfu.ru #teststudpost.ru
    - www.studpostncfu.ru #teststudpost.ru
    secretName: ingress-tls
  rules:
  - host: studpostncfu.ru #teststudpost.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: www.studpostncfu.ru #teststudpost.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
